app/index.scss
html {
  scroll-behavior: smooth;
}

body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica,ubuntu, roboto, noto, segoe ui, arial, sans-serif;
  font-size: 1.5em;
}

.container {
  -webkit-transform: translate3d(0, 0, 0);

  .header {
    text-align: center;
    padding: 0.5em;
    background-color: #005282;
    border-bottom: 1px solid #fff;
    line-height: 1.3;
    color: #fff;
  }

  .app {
    display: flex;
    flex-direction: column;
    min-width: 100%;
    height: 100%;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
  }

  #message-area {
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
  }

  .messages {
    flex: 1;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
    padding: 1em;
  }

  .message {
    display: flex;
    align-items: center;

    span {
      display: block;
      border-radius: 0.25em;
      margin: 10px;
      padding: 10px;
    }

    &.bot span {
      background-color: #005282;
      color: #fff;
      border-radius: 4px;
    }

    &.bot::before {
      content: '🤖';
    }

    &.input {
      align-self: flex-end;
    }

    &.input span {
      background-color: #33aaee;
      text-align: right;
      color: white;
    }

    &.input::after {
      content: '🐵';
    }
  }

  .controls {
    border-top: 0.5px solid #e3e3e3;
    padding: 10px;

    form {
      display: flex;
      flex-direction: row;
      justify-content: center;
      margin: 0;
    }

    #textbox {
      flex: 1;
      font-size: 100%;
    }

    #speech,
    #submit {
      font-size: 100%;
      margin-left: 10px;
      border-radius: 4px;
      padding: 9px;
      background-color: white;
    }
  }
}

